--- a/assignment3/package.json
+++ b/assignment3/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "http-server": "^14.1.1",
     "xml2js": "^0.6.2"
   }
 }
